--- a/package.json
+++ b/package.json
@@ -18,5 +18,19 @@
   "bugs": {
     "url": "https://github.com/ryanspena/TLOG/issues"
   },
-  "homepage": "https://github.com/ryanspena/TLOG#readme"
+  "homepage": "https://github.com/ryanspena/TLOG#readme",
+  "devDependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2",
+    "mysql": "^2.18.1",
+    "sequelize": "^6.6.5"
+  },
+  "dependencies": {
+    "jest": "^27.0.6",
+    "nodemon": "^2.0.12"
+  }
 }
